Fixes a bug in blog layout where subtitles were hidden by blog body

--- a/content/css/blog.scss
+++ b/content/css/blog.scss
@@ -63,7 +63,7 @@ p {
   h1 {
     z-index: 2;
     padding-left: 10%;
-    width: 700px;
+    width: 100%;
   }
   h2 {
     font-family: "Montserrat", sans-serif;
@@ -86,7 +86,7 @@ p {
 }
 
 .bg-photo {
-  height: $blog-header-height;
+  height: fit-content;
   padding-top: 5%;
   background-image: url("/images/rover.png");
   background-repeat: no-repeat;
@@ -94,12 +94,17 @@ p {
   background-position: 10% 50%;
   grid-column: 1 / 5;
   grid-row: 1 / 2;
+
+  display: grid;
+  grid-template-columns: auto 76% auto;
+  grid-column-gap: 0;
+
   h1 {
     color: $white;
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.65);
     z-index: 2;
-    padding-left: 10%;
-    width: 700px;
+    grid-column: 2 / 3;
+    // margin-right: 12%;
   }
   h2 {
     color: $white;
@@ -107,9 +112,10 @@ p {
     font-size: 24px;
     letter-spacing: -1px;
     line-height: 24px;
-    padding-top: 75px;
-    padding-left: 10%;
+    padding-top: 50px;
+    padding-bottom: 30px;
     text-shadow: 0 3px 6px rgba(0, 0, 0, 0.65);
+    grid-column: 2 / 3;
   }
 }
 .bg-light,
@@ -239,17 +245,14 @@ p {
   .bg-light,
   .bg-dark,
   .bg-photo {
-    height: 35vh;
     background-position: 20% 50%;
-    padding-top: 35%;
+    grid-template-columns: auto 95% auto;
+    padding-top: calc(#{$header-height} + 10px);
     h1 {
       font-size: 55px;
       line-height: 1;
-      width: 80vw;
-      padding-left: 15px;
     }
     h2 {
-      width: 90vw;
       font-size: 22px;
       line-height: 24px;
       padding-top: 15px;
@@ -301,25 +304,6 @@ p {
 @media screen and (max-width: 993px) and (min-width: 450px) {
   .blog-wrapper {
     padding-top: 0;
-  }
-  .bg-lighter,
-  .bg-light,
-  .bg-dark,
-  .bg-photo {
-    height: 40vh;
-    padding-top: 35%;
-    padding-left: 7%;
-    h1 {
-      width: 75vw;
-      padding-left: 15px;
-    }
-    h2 {
-      width: 75vw;
-      font-size: 22px;
-      line-height: 24px;
-      padding-top: 15px;
-      padding-left: 15px;
-    }
   }
 
   .bg-light,
