--- a/content/css/robots.scss
+++ b/content/css/robots.scss
@@ -227,6 +227,7 @@ $header-height: 90px;
   grid-column-gap: 3px;
   justify-content: center;
   margin-left: 1%;
+  padding-bottom: 10px;
   .card-fact {
     color: $aqua;
     font-size: 12px;
